データベースとの接続が切れるのを修正&コマンド追加

--- a/resources/messages.yml
+++ b/resources/messages.yml
@@ -6,15 +6,17 @@ createdTable: "テーブルを作成しました"
 tableIsReady: "テーブルの準備ができました"
 signUp: "&bWebInventoryに登録しました"
 reloadMessagesYaml: "&amessages.ymlをリロードしました"
+reconnect: "&aデータベースに再接続しました"
 closeAllInventory: "&aすべてのWebInventoryを閉じました"
 inventoryEnabled: "&aWebInventoryを開けるようにしました"
 inventoryDisabled: "&aWebInventoryを開けなくしました"
 
 doNotHavePermission: "&c実行する権限がありません"
-failedConnectDatabase: "&cデータベースへの接続に失敗しました"
+failedConnectDb: "&cデータベースへの接続に失敗しました"
 failedCreateTable: "&cテーブルの作成に失敗しました"
 failedReadyTable: "&cテーブルを準備できませんでした"
 failedSignUp: "&cWebInventoryに登録できませんでした"
+failedReconnect: "&cデータベースに再接続できませんでした"
 notEnoughArguments: "&c引数が足りません"
 notPlayer: "&cプレイヤー専用コマンドです"
 notExist: "&c存在しません"
