--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -8,7 +8,7 @@ commands:
   webinventoryadmin:
     description: プラグイン管理コマンド
     aliases: [wiadmin, wia]
-    usage: /wia <reload | yaml | close | toggle>
+    usage: /wia <toggle | close | reconnect | reload | yaml>
     permission: webinventory.command.admin
     permission-message: パーミッション "<permission>" がないため、実行できません。
   webinventoryopen:
@@ -26,7 +26,7 @@ commands:
   webinventory:
     description: WebInventoryコマンド
     aliases: [webi, wi]
-    usage: /wi signup
+    usage: /wi [signup]
     permission: webinventory.command.wi
     permission-message: パーミッション "<permission>" がないため、実行できません。
 permissions:
